; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sis_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @sis_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sis_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sis_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.sis_softc* @device_get_softc(i32 %4)
  store %struct.sis_softc* %5, %struct.sis_softc** %3, align 8
  %6 = load %struct.sis_softc*, %struct.sis_softc** %3, align 8
  %7 = call i32 @SIS_LOCK(%struct.sis_softc* %6)
  %8 = load %struct.sis_softc*, %struct.sis_softc** %3, align 8
  %9 = call i32 @sis_stop(%struct.sis_softc* %8)
  %10 = load %struct.sis_softc*, %struct.sis_softc** %3, align 8
  %11 = call i32 @sis_wol(%struct.sis_softc* %10)
  %12 = load %struct.sis_softc*, %struct.sis_softc** %3, align 8
  %13 = call i32 @SIS_UNLOCK(%struct.sis_softc* %12)
  ret i32 0
}

declare dso_local %struct.sis_softc* @device_get_softc(i32) #1

declare dso_local i32 @SIS_LOCK(%struct.sis_softc*) #1

declare dso_local i32 @sis_stop(%struct.sis_softc*) #1

declare dso_local i32 @sis_wol(%struct.sis_softc*) #1

declare dso_local i32 @SIS_UNLOCK(%struct.sis_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
